--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "kitodo/presentation",
+  "name": "stweil/presentation",
   "description": "Base plugins, modules, services and API of the Digital Library Framework. It is part of the community-based Kitodo Digitization Suite.",
   "type": "typo3-cms-extension",
   "homepage": "https://www.kitodo.org",
