--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
     "docs": "https://docs.typo3.org/p/kitodo/presentation/main/en-us/"
   },
   "require": {
-    "php": "^7.4",
+    "php": "^7.4|^8.2",
     "ext-curl": "*",
     "ext-dom": "*",
     "ext-json": "*",
