--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "typo3/cms-tstemplate": "^10.4.36|^11.5.24",
     "caseyamcl/phpoaipmh": "^3.3",
     "ubl/php-iiif-prezi-reader": "0.3.0",
-    "solarium/solarium": "^5.2.0"
+    "solarium/solarium": "^5.2.0|^6.2.8"
   },
   "require-dev": {
     "spatie/phpunit-watcher": "^1.23",
