--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,6 +35,7 @@ jobs:
       matrix:
         typo3: [ 11.5, 12.4 ]
         php: [ 8.1, 8.2, 8.3, 8.4 ]
+      fail-fast: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
