--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -33,9 +33,9 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        variants: [ {typo3: 11.5, php: 8.1}, {typo3: 12.4, php: 8.1} ]
         typo3: [ 11.5, 12.4 ]
         php: [ 8.1, 8.2, 8.3 ]
+      fail-fast: false
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
