--- a/composer.json
+++ b/composer.json
@@ -32,10 +32,10 @@
     "ext-libxml": "*",
     "ext-openssl": "*",
     "ext-simplexml": "*",
-    "typo3/cms-core": "^11.5|^12.4",
-    "typo3/cms-extbase": "^11.5|^12.4",
-    "typo3/cms-scheduler": "^11.5|^12.4",
-    "typo3/cms-tstemplate": "^11.5|^12.4",
+    "typo3/cms-core": "^11.5|^12.4|^13.4",
+    "typo3/cms-extbase": "^11.5|^12.4|^13.4",
+    "typo3/cms-scheduler": "^11.5|^12.4|^13.4",
+    "typo3/cms-tstemplate": "^11.5|^12.4|^13.4",
     "caseyamcl/phpoaipmh": "^3.3",
     "slub/php-mods-reader": "^0.4",
     "ubl/php-iiif-prezi-reader": "0.3",
@@ -47,11 +47,11 @@
     "phpstan/phpstan": "^1.12",
     "phpunit/phpunit": "^9.6",
     "spatie/phpunit-watcher": "^1.23",
-    "typo3/cms-backend": "^11.5|^12.4",
-    "typo3/cms-fluid": "^11.5|^12.4",
-    "typo3/cms-fluid-styled-content": "^11.5|^12.4",
-    "typo3/cms-frontend": "^11.5|^12.4",
-    "typo3/testing-framework": "^7.1",
+    "typo3/cms-backend": "^11.5|^12.4|^13.4",
+    "typo3/cms-fluid": "^11.5|^12.4|^13.4",
+    "typo3/cms-fluid-styled-content": "^11.5|^12.4|^13.4",
+    "typo3/cms-frontend": "^11.5|^12.4|^13.4",
+    "typo3/testing-framework": "*",
     "vlucas/phpdotenv": "^5.6"
   },
   "replace": {
