--- a/composer.json
+++ b/composer.json
@@ -40,13 +40,12 @@
     "slub/php-mods-reader": "^0.4",
     "ubl/php-iiif-prezi-reader": "0.3",
     "solarium/solarium": "^6.3",
-    "softcreatr/jsonpath": "^0.10",
-    "symfony/process": "^6.4"
+    "softcreatr/jsonpath": "^0.10"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.12",
     "phpunit/phpunit": "^9.6",
-    "spatie/phpunit-watcher": "^1.23",
+    "spatie/phpunit-watcher": "^1.24",
     "typo3/cms-backend": "^11.5|^12.4|^13.4",
     "typo3/cms-fluid": "^11.5|^12.4|^13.4",
     "typo3/cms-fluid-styled-content": "^11.5|^12.4|^13.4",
