--- a/composer.json
+++ b/composer.json
@@ -39,8 +39,7 @@
     "caseyamcl/phpoaipmh": "^3.3.1",
     "slub/php-mods-reader": "^0.4.0",
     "ubl/php-iiif-prezi-reader": "0.3.0",
-    "solarium/solarium": "5.2 - 6.3",
-    "symfony/process": "^5.4|^6.4"
+    "solarium/solarium": "5.2 - 6.3"
   },
   "require-dev": {
     "phpstan/phpstan": "^1.12",
@@ -50,7 +49,7 @@
     "typo3/cms-fluid": "^11.5.41|^12.4.24|^13.4",
     "typo3/cms-fluid-styled-content": "^11.5.41|^12.4.24|^13.4",
     "typo3/cms-frontend": "^11.5.41|^12.4.24|^13.4",
-    "typo3/testing-framework": "^7.1.1",
+    "typo3/testing-framework": "*",
     "vlucas/phpdotenv": "^5.6.1"
   },
   "replace": {
