Use package softcreatr/jsonpath instead of flow/jsonpath
The installation with composer reported this warning:

    Package flow/jsonpath is abandoned, you should avoid using it.
    Use softcreatr/jsonpath instead.

Signed-off-by: Stefan Weil <sw@weilnetz.de>

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
     "slub/php-mods-reader": "^0.4",
     "ubl/php-iiif-prezi-reader": "0.3",
     "solarium/solarium": "^6.3",
+    "softcreatr/jsonpath": "^0.10.0",
     "symfony/process": "^6.4"
   },
   "require-dev": {
